--- a/style.css
+++ b/style.css
@@ -370,7 +370,7 @@ a:hover {
   position: relative;
 }
 
-.page3 .right::after{
+.page3 .right::after {
   content: "";
   position: absolute;
   background-image: url(./images/dots-yellow.svg);
@@ -384,13 +384,11 @@ a:hover {
 
 .page3 .right img {
   width: 100%;
-height: 100%;
+  height: 100%;
   border-radius: 20px;
   object-fit: cover;
   object-position: center;
 }
-
-
 
 .page4 {
   width: 100%;
@@ -401,7 +399,7 @@ height: 100%;
   justify-content: space-between;
 }
 
-.page4 .left{
+.page4 .left {
   width: 50%;
   margin-left: 5vw;
   display: flex;
@@ -412,7 +410,7 @@ height: 100%;
   gap: 10px;
 }
 
-.page4 .left::after{
+.page4 .left::after {
   content: "";
   position: absolute;
   background-image: url(./images/dots-green.svg);
@@ -424,59 +422,197 @@ height: 100%;
   z-index: -1;
 }
 
-.page4 img{
+.page4 img {
   border-radius: 20px;
-
 }
 
-.page4 .left .first{
+.page4 .left .first {
   width: 55%;
   height: 80%;
 }
-.page4 .left .second{
+.page4 .left .second {
   width: 35%;
   height: 30%;
 }
 
-.third{
+.third {
   position: absolute;
   top: 32%;
   left: 29%;
   width: 350px;
-
 }
 
-.page4 .right{
+.page4 .right {
   width: 43%;
   position: relative;
 }
 
-.page4 .right h1, p{
+.page4 .right h1,
+p {
   font-family: p;
 }
-.page4 .right p{
+.page4 .right p {
   font-size: 1.2vw;
   margin-top: 1vw;
 }
-.page4 ul{
+.page4 ul {
   display: flex;
   justify-content: space-between;
   margin-top: 1vw;
   flex-wrap: wrap;
-  /* gap: 20px; */
-  list-style-type:circle;
 
+  list-style-type: circle;
 }
 
-.page4  .right ul li{
+.page4 .right ul li {
   width: 48%;
   font-family: p;
 }
 
-.page4  .right ul li::marker{
-font-size: 26px;
+.page4 .right ul li::marker {
+  font-size: 26px;
 }
 
+.page5 {
+  width: 100%;
+  height: 65vh;
+  position: relative;
+}
+
+.page5 h3 {
+  font-size: 3vw;
+  font-family: p;
+  text-align: center;
+  margin-top: 7vw;
+}
+
+.page5 .swiper {
+  width: 100%;
+
+  margin-top: 2vw;
+  /* background-color: rgb(151, 17, 17); */
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  /* background: #e70202; */
+  background-color: #eff2f1;
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+  padding: 5vw 20vw;
+  flex-wrap: wrap;
+}
+
+.page5 p {
+  font-family: p;
+}
+
+.swiper-slide img {
+  display: block;
+  margin: 0 auto;
+  margin-top: 5vw;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.swiper-slide h4 {
+  font-size: 1.2vw;
+  margin-top: 10px;
+  display: block;
+  font-family: p;
+}
+
+.blog {
+  width: 100%;
+  height: 80vh;
+  position: relative;
+  background-color: #eff2f1;
+  padding: var(--padding);
+}
+
+.blog h1 {
+  display: inline-block;
+  font-family: p;
+  margin-top: 6vw;
+  margin-left: 4vw;
+}
+
+.blog a h2 {
+  color: #000;
+  display: inline-block;
+  text-align: end;
+  width: 74vw;
+  font-size: 1.3vw;
+  text-decoration: underline;
+}
+
+.blg-container {
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 3vw;
+  padding: 2vw 3vw;
+}
+
+.elem {
+  width: 400px;
+  height: 300px;
+  overflow: hidden;
+  border-radius: 20px;
+  position: relative;
+}
+
+.elem img {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  object-fit: cover;
+  object-position: center;
+  transition: .3s linear;
+  cursor: pointer;
+  filter: grayscale(100%);
+}
+
+.elem:hover img{
+  scale: 1.1;
+  border-radius: 10px;
+  filter: grayscale(0);
+}
+
+.elem h5 {
+  font-family: p;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: .2s linear;
+  
+}
+
+.elem:hover h5{
+  opacity: 1;
+ 
+}
+
+.elem h5 span {
+  color: #0000009b;
+}
+
+.footer{
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  
+}
 
 @media (max-width: 1000px) {
   .nav {
