--- a/style.css
+++ b/style.css
@@ -529,7 +529,7 @@ p {
 
 .blog {
   width: 100%;
-  height: 80vh;
+  height: 90vh;
   position: relative;
   background-color: #eff2f1;
   padding: var(--padding);
@@ -564,7 +564,7 @@ p {
 
 .elem {
   width: 400px;
-  height: 300px;
+  height: 310px;
   overflow: hidden;
   border-radius: 20px;
   position: relative;
@@ -576,12 +576,12 @@ p {
   border-radius: 20px;
   object-fit: cover;
   object-position: center;
-  transition: .3s linear;
+  /* transition: 0.3s linear; */
   cursor: pointer;
   filter: grayscale(100%);
 }
 
-.elem:hover img{
+.elem:hover img {
   scale: 1.1;
   border-radius: 10px;
   filter: grayscale(0);
@@ -594,24 +594,206 @@ p {
   left: 50%;
   transform: translate(-50%, -50%);
   opacity: 0;
-  transition: .2s linear;
-  
+  transition: 0.2s linear;
 }
 
-.elem:hover h5{
+.elem:hover h5 {
   opacity: 1;
- 
 }
 
 .elem h5 span {
   color: #0000009b;
 }
 
-.footer{
+.footer {
   width: 100%;
   height: 100vh;
   position: relative;
-  
+  background-color: #ffffff;
+  padding: var(--padding);
+}
+
+.first-line {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  align-items: center;
+}
+
+.massage {
+  width: 40vw;
+  /* background-color: red; */
+}
+
+.massage > h1 {
+  font-family: p;
+  font-size: 1.5vw;
+  display: flex;
+  align-items: center;
+  padding: 0.2vw 1vw;
+  color: #000000b0;
+
+  margin-top: 4vw;
+  margin-left: 1vw;
+}
+
+.massage > h1 img {
+  scale: 1.2;
+  margin-right: 1vw;
+}
+
+.input {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-bottom: 0.5vw;
+}
+
+.snd {
+  display: flex;
+  justify-content: center;
+  align-items: centere;
+  margin-left: 2vw;
+  padding: 0.7vw 1.4vw;
+  border-radius: 10px;
+  border: 1px solid black;
+  background-color: #314d43;
+  cursor: pointer;
+}
+
+.snd i {
+  font-size: 1.8vw;
+  color: #ffffff;
+}
+
+.input input {
+  padding: 1vw 1.5vw;
+  border-radius: 10px;
+  text-transform: capitalize;
+  border: 1px solid rgba(0, 0, 0, 0.502);
+}
+
+.sofa {
+  /* position: absolute; */
+  /* bottom: 1%;
+  right: 10%; */
+  width: 23vw;
+}
+
+.ftr-hed {
+  font-family: p;
+  margin-left: 1.5vw;
+  margin-top: 1vw;
+  font-size: 1.9vw;
+  position: relative;
+  display: inline-block;
+}
+
+.ftr-hed::after {
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 2px;
+  bottom: 0;
+  left: 0px;
+  background-color: #314d43;
+}
+
+.second-line {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  /* align-items: center; */
+}
+
+.social-media {
+  display: flex;
+  width: 20%;
+  flex-direction: column;
+  margin-left: 1.2vw;
+  margin-top: 1vw;
+}
+
+.paraftr {
+  font-family: p;
+}
+
+.paraftr span {
+  color: red;
+  font-weight: 999;
+  text-transform: capitalize;
+  border-bottom: 1px solid black;
+}
+
+.social-icons {
+  display: flex;
+  font-size: 1.6vw;
+  margin-top: 1.3vw;
+  color: #314d43;
+  gap: 11px;
+}
+
+.social-icons i {
+  padding: 1.7vw;
+  width: 15px;
+  height: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #eff2f1;
+  border-radius: 50%;
+  transition: 0.2s linear;
+  cursor: pointer;
+}
+
+.social-icons i:hover {
+  color: #eff2f1;
+  background-color: #3b5d50;
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+  width: 16%;
+  margin-top: 1vw;
+  gap: 15px;
+  /* background-color: red; */
+}
+
+.social-media {
+  margin-left: 2vw;
+}
+
+.section a {
+  display: inline-block;
+  color: #000;
+  font-family: p;
+  font-size: 1.1vw;
+  text-transform: capitalize;
+  position: relative;
+  overflow: hidden;
+}
+
+.section a::before {
+  width: 20%;
+  height: 2px;
+
+  position: absolute;
+  bottom: 0;
+  left: -100%;
+  content: "";
+  background-color: rebeccapurple;
+  transition: 0.5s linear;
+}
+
+.section a:hover::before {
+  left: 0;
+  color: #3b5d5098;
+}
+
+.ccc{
+  text-align: center;
+  margin-top: 5vw;
 }
 
 @media (max-width: 1000px) {
